RESOLVED FIXED Bug 160683
Load stylesheets in link elements inside a connected shadow tree
https://bugs.webkit.org/show_bug.cgi?id=160683
Summary Load stylesheets in link elements inside a connected shadow tree
Eric
Reported 2016-08-08 21:22:05 PDT
Blink now supports stylesheets in shadow roots: https://chromium.googlesource.com/chromium/src/+/f0cecf3ac0c7adf7a7c78eeb02cc75d380a9ce4d Would be good to support this in webkit asap so both implementations are the same. Our developers have asked for this for a long time, so I'm stoked that this is finally part of the spec! Repro: http://jsbin.com/vexocusili/edit?html,output
Attachments
Adds the support (31.25 KB, patch)
2016-11-02 00:50 PDT, Ryosuke Niwa
no flags
Patch for landing (29.56 KB, patch)
2016-11-04 13:02 PDT, Ryosuke Niwa
no flags
Archive of layout-test-results from ews117 for mac-yosemite (788.99 KB, application/zip)
2016-11-04 13:49 PDT, Build Bot
no flags
Patch for landing (27.80 KB, patch)
2016-11-04 14:00 PDT, Ryosuke Niwa
no flags
Patch for landing (27.57 KB, patch)
2016-11-04 14:00 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2016-10-04 22:07:58 PDT
We need to fix the bug 162744 first.
Radar WebKit Bug Importer
Comment 2 2016-11-01 01:01:23 PDT
Ryosuke Niwa
Comment 3 2016-11-02 00:50:07 PDT
Created attachment 293648 [details] Adds the support
Antti Koivisto
Comment 4 2016-11-02 13:43:55 PDT
r=me
WebKit Commit Bot
Comment 5 2016-11-02 14:37:56 PDT
Comment on attachment 293648 [details] Adds the support Clearing flags on attachment: 293648 Committed r208302: <http://trac.webkit.org/changeset/208302>
WebKit Commit Bot
Comment 6 2016-11-02 14:38:02 PDT
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 7 2016-11-03 16:21:02 PDT
Reverted r208302 for reason: This change causes LayoutTest crashes under GuardMalloc. Committed r208356: <http://trac.webkit.org/changeset/208356>
Ryosuke Niwa
Comment 8 2016-11-04 13:01:13 PDT
https://trac.webkit.org/changeset/208378 should have fixed the crash.
Ryosuke Niwa
Comment 9 2016-11-04 13:02:15 PDT
Created attachment 293915 [details] Patch for landing
Build Bot
Comment 10 2016-11-04 13:49:34 PDT
Comment on attachment 293915 [details] Patch for landing Attachment 293915 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/2463228 Number of test failures exceeded the failure limit.
Build Bot
Comment 11 2016-11-04 13:49:38 PDT
Created attachment 293923 [details] Archive of layout-test-results from ews117 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-yosemite Platform: Mac OS X 10.10.5
Ryosuke Niwa
Comment 12 2016-11-04 14:00:05 PDT
Created attachment 293924 [details] Patch for landing
Ryosuke Niwa
Comment 13 2016-11-04 14:00:52 PDT
Created attachment 293925 [details] Patch for landing
Ryosuke Niwa
Comment 14 2016-11-04 14:01:11 PDT
Comment on attachment 293925 [details] Patch for landing Wait for EWS
WebKit Commit Bot
Comment 15 2016-11-04 15:56:37 PDT
Comment on attachment 293925 [details] Patch for landing Clearing flags on attachment: 293925 Committed r208403: <http://trac.webkit.org/changeset/208403>
WebKit Commit Bot
Comment 16 2016-11-04 15:56:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.