Source/WebCore/dom/Element.cpp
@@ -1784,8 +1784,6 @@ void Element::removeShadowRoot()
 
     oldRoot->setHost(nullptr);
     oldRoot->setParentTreeScope(&document());
-
-    notifyChildNodeRemoved(*this, *oldRoot);
 }
 
 static bool canAttachAuthorShadowRoot(const Element& element)
