Source/WebCore/svg/SVGStyleElement.cpp
@@ -116,16 +116,17 @@ void SVGStyleElement::finishParsingChildren()
 
 Node::InsertionNotificationRequest SVGStyleElement::insertedInto(ContainerNode& rootParent)
 {
-    SVGElement::insertedInto(rootParent);
-    if (rootParent.inDocument())
+    bool wasInDocument = inDocument();
+    auto result = SVGElement::insertedInto(rootParent);
+    if (rootParent.inDocument() && !wasInDocument)
         m_styleSheetOwner.insertedIntoDocument(*this);
-    return InsertionDone;
+    return result;
 }
 
 void SVGStyleElement::removedFrom(ContainerNode& rootParent)
 {
     SVGElement::removedFrom(rootParent);
-    if (rootParent.inDocument())
+    if (rootParent.inDocument() && !inDocument())
         m_styleSheetOwner.removedFromDocument(*this);
 }
 
